--- a/client/src/CSS/styles.scss
+++ b/client/src/CSS/styles.scss
@@ -1,5 +1,6 @@
 // scss_partials/basic
 @use "scss_partials/basic/toggleSwitch";
+@use "scss_partials/basic/customCheckbox";
 // scss_partials/authentication
 @use "scss_partials/authentication/registerLogin";
 // scss_partials/home
