Added Light/Dark mode functionality to mass delete buttons. The check-all mass delete button now only appears when not all list items are checked. Also now mass delete buttons take searchFilterSort into consideration.

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -70,7 +70,7 @@
 	}
 
 	.list-table__header__mass-delete-options-container__button--disabled {
-		color: lightgray;
+		opacity: 0.2;
 		cursor: default;
 		pointer-events: none;
 	}
