--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -109,14 +109,6 @@ body, */
 		color: v.$mode-top-bar-text-color-button-dark;
 	}
 
-	// Light/Dark mode background colors for CreateItemSidebar component
-	.js-set-create-item-sidebar-background-color-dark-mode-false {
-		background-color: v.$mode-create-item-sidebar-background-color-light;
-	}
-	.js-set-create-item-sidebar-background-color-dark-mode-true {
-		background-color: v.$mode-create-item-sidebar-background-color-dark;
-	}
-
 	// Light/Dark mode text colors with hover for base icon-buttons
 	.js-set-base-icon-button-background-color-with-hover-dark-mode-false {
 		color: v.$mode-base-icon-button-text-color-light;
@@ -153,64 +145,44 @@ body, */
 		}
 	}
 
-	// Light/Dark mode border, background, and text color for ItemViewTopBar options-button
-	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-false {
-		border-color: v.$mode-top-bar-border-color-button-light;
-		background-color: v.$mode-top-bar-background-color-button-light;
-		// Same as hover text color for more distinct icon-buttons
-		color: v.$mode-more-distinct-icon-button-hover-text-color-light;
+	// Light/Dark mode background colors for CreateItemSidebar component
+	.js-set-create-item-sidebar-background-color-dark-mode-false {
+		background-color: v.$mode-create-item-sidebar-background-color-light;
 	}
-	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-true {
-		border-color: v.$mode-top-bar-border-color-button-dark;
-		background-color: v.$mode-top-bar-background-color-button-dark;
-		// Same as hover text color for more distinct icon-buttons
-		color: v.$mode-more-distinct-icon-button-hover-text-color-dark;
-	}
-
-	// Light/Dark mode hover background color for ItemViewTopBar options-dropdown-row
-	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-false {
-		&:hover,
-		&:active {
-			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-light;
-		}
-	}
-	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-true {
-		&:hover,
-		&:active {
-			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark;
-		}
+	.js-set-create-item-sidebar-background-color-dark-mode-true {
+		background-color: v.$mode-create-item-sidebar-background-color-dark;
 	}
 
 	// Light/Dark mode border, background, and text color for base form-input
-	.js-set-base-form-input-border-background-text-border-text-color-dark-mode-false {
+	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-dark-mode-false {
 		border-color: v.$mode-create-item-form-input-border-color-light;
 		background-color: v.$mode-create-item-form-input-background-color-light;
 		color: v.$mode-home-text-color-light;
 	}
-	.js-set-base-form-input-border-background-text-border-text-color-dark-mode-true {
+	.js-set-create-item-sidebar-form-input-border-background-text-border-text-color-dark-mode-true {
 		border-color: v.$mode-create-item-form-input-border-color-dark;
 		background-color: v.$mode-create-item-form-input-background-color-dark;
 		color: v.$mode-home-text-color-dark;
 	}
 
 	// Light/Dark mode disabled base label
-	.js-set-base-diabled-label-dark-mode-false {
+	.js-set-create-item-sidebar-diabled-label-dark-mode-false {
 		color: v.$mode-create-item-form-input-disabled-text-color-light;
 		pointer-events: none;
 	}
-	.js-set-base-diabled-label-dark-mode-true {
+	.js-set-create-item-sidebar-diabled-label-dark-mode-true {
 		color: v.$mode-create-item-form-input-disabled-text-color-dark;
 		pointer-events: none;
 	}
 
 	// Light/Dark mode disables base input date
-	.js-set-base-diabled-input-date-dark-mode-false {
+	.js-set-create-item-sidebar-diabled-input-date-dark-mode-false {
 		border-color: v.$mode-create-item-form-input-border-color-light;
 		background-color: v.$mode-create-item-form-input-disabled-background-color-light;
 		color: v.$mode-create-item-form-input-disabled-text-color-dark;
 		pointer-events: none;
 	}
-	.js-set-base-diabled-input-date-dark-mode-true {
+	.js-set-create-item-sidebar-diabled-input-date-dark-mode-true {
 		border-color: v.$mode-create-item-form-input-border-color-dark;
 		background-color: v.$mode-create-item-form-input-disabled-background-color-dark;
 		color: v.$mode-create-item-form-input-disabled-text-color-dark;
@@ -237,6 +209,42 @@ body, */
 	}
 	.js-set-list-row-selected-background-color-dark-mode-true {
 		background-color: v.$mode-list-row-selected-background-color-dark;
+	}
+
+	// Light/Dark mode background colors for ListView mass-delete-button
+	.js-set-list-view-mass-delete-button-text-color-dark-mode-false {
+		color: v.$mode-list-view-mass-delete-button-text-color-light;
+	}
+	.js-set-list-view-mass-delete-button-text-color-dark-mode-true {
+		color: v.$mode-list-view-mass-delete-button-text-color-dark;
+	}
+
+	// Light/Dark mode border, background, and text color for ItemViewTopBar options-button
+	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-false {
+		border-color: v.$mode-top-bar-border-color-button-light;
+		background-color: v.$mode-top-bar-background-color-button-light;
+		// Same as hover text color for more distinct icon-buttons
+		color: v.$mode-more-distinct-icon-button-hover-text-color-light;
+	}
+	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-true {
+		border-color: v.$mode-top-bar-border-color-button-dark;
+		background-color: v.$mode-top-bar-background-color-button-dark;
+		// Same as hover text color for more distinct icon-buttons
+		color: v.$mode-more-distinct-icon-button-hover-text-color-dark;
+	}
+
+	// Light/Dark mode hover background color for ItemViewTopBar options-dropdown-row
+	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-false {
+		&:hover,
+		&:active {
+			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-light;
+		}
+	}
+	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-true {
+		&:hover,
+		&:active {
+			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark;
+		}
 	}
 
 	// Light/Dark mode background colors for ItemView item-box
