Made border color of createItemSidebar form-inputs in dark mode a lighter gray

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -110,7 +110,7 @@ $mode-more-distinct-icon-button-text-color-dark: $dark-gray-level-1;
 $mode-more-distinct-icon-button-hover-text-color-light: $mode-base-icon-button-hover-text-color-light;
 $mode-more-distinct-icon-button-hover-text-color-dark: $gray-level-5;
 $mode-create-item-form-input-border-color-light: $gray-level-5;
-$mode-create-item-form-input-border-color-dark: $dark-gray-level-10;
+$mode-create-item-form-input-border-color-dark: $gray-level-5;
 $mode-create-item-form-input-background-color-light: $light-gray-level-5;
 $mode-create-item-form-input-background-color-dark: $gray-level-10;
 $mode-create-item-form-input-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
