--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
@@ -66,7 +66,7 @@
 	}
 
 	.list-sidebar__table__row {
-		border-bottom: v.$list-table-border-width solid v.$list-table-border-color;
+		border-bottom: 1px solid v.$mode-list-row-border-color-light;
 		padding: 5px;
 		height: v.$list-item-table-row-height;
 		text-align: center;
@@ -85,7 +85,7 @@
 		background-color: v.$mode-home-background-color-light;
 		// Used box shadow since the header row being sticky with
 		// ...background-color applied keeps the bottom-border from appearing
-		box-shadow: 0 1px 0 v.$gray-level-2;
+		box-shadow: v.$mode-list-header-box-shadow-light;
 		width: v.$item-container-list-sidebar-width;
 	}
 
